src/test/ui/invalid-self-argument/bare-fn-start.stderr
error: unexpected `self` parameter in function
  --> $DIR/bare-fn-start.rs:1:6
   |
LL | fn a(&self) { }
   |      ^^^^^ not valid as function parameter
   |
   = note: `self` is only valid as the first parameter of an associated function

error: aborting due to previous error

